--- a/gradle.properties
+++ b/gradle.properties
@@ -42,4 +42,4 @@ mod_group_id=com.gmail.thelilchicken01.ethermist
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=LilChicky
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Enter the mystical Ethermist!\nA magical dimension mod by LilChicky
+mod_description=Enter the mystical Ethermist!\nA magical dimension mod by LilChicky. Art help from Amaresse!
