--- a/src/main/resources/data/ethermist/worldgen/noise_settings/settings.json
+++ b/src/main/resources/data/ethermist/worldgen/noise_settings/settings.json
@@ -436,12 +436,11 @@
                     "then_run": {
                       "type": "minecraft:condition",
                       "if_true": {
-                        "type": "minecraft:y_above",
-                        "add_stone_depth": false,
-                        "anchor": {
-                          "absolute": 97
-                        },
-                        "surface_depth_multiplier": 2
+                        "type": "minecraft:stone_depth",
+                        "add_surface_depth": true,
+                        "offset": 0,
+                        "secondary_depth_range": 6,
+                        "surface_type": "floor"
                       },
                       "then_run": {
                         "type": "minecraft:sequence",
@@ -450,7 +449,7 @@
                             "type": "minecraft:condition",
                             "if_true": {
                               "type": "minecraft:noise_threshold",
-                              "max_threshold": -0.5454,
+                              "max_threshold": -0.4,
                               "min_threshold": -0.909,
                               "noise": "minecraft:surface"
                             },
@@ -465,8 +464,8 @@
                             "type": "minecraft:condition",
                             "if_true": {
                               "type": "minecraft:noise_threshold",
-                              "max_threshold": 0.1818,
-                              "min_threshold": -0.1818,
+                              "max_threshold": 0.1,
+                              "min_threshold": -0.1,
                               "noise": "minecraft:surface"
                             },
                             "then_run": {
@@ -481,7 +480,7 @@
                             "if_true": {
                               "type": "minecraft:noise_threshold",
                               "max_threshold": 0.909,
-                              "min_threshold": 0.5454,
+                              "min_threshold": 0.4,
                               "noise": "minecraft:surface"
                             },
                             "then_run": {
@@ -492,30 +491,10 @@
                             }
                           },
                           {
-                            "type": "minecraft:sequence",
-                            "sequence": [
-                              {
-                                "type": "minecraft:condition",
-                                "if_true": {
-                                  "type": "minecraft:water",
-                                  "add_stone_depth": false,
-                                  "offset": 0,
-                                  "surface_depth_multiplier": 0
-                                },
-                                "then_run": {
-                                  "type": "minecraft:block",
-                                  "result_state": {
-                                    "Name": "ethermist:etherstone"
-                                  }
-                                }
-                              },
-                              {
-                                "type": "minecraft:block",
-                                "result_state": {
-                                  "Name": "ethermist:etherstone"
-                                }
-                              }
-                            ]
+                            "type": "minecraft:block",
+                            "result_state": {
+                              "Name": "ethermist:etherstone"
+                            }
                           }
                         ]
                       }
@@ -827,7 +806,7 @@
                                   "type": "minecraft:water",
                                   "add_stone_depth": false,
                                   "offset": 0,
-                                  "surface_depth_multiplier": 0
+                                  "surface_depth_multiplier": 6
                                 },
                                 "then_run": {
                                   "type": "minecraft:block",
@@ -1174,7 +1153,7 @@
                                   "type": "minecraft:water",
                                   "add_stone_depth": false,
                                   "offset": 0,
-                                  "surface_depth_multiplier": 0
+                                  "surface_depth_multiplier": 6
                                 },
                                 "then_run": {
                                   "type": "minecraft:block",
