--- a/src/main/resources/data/ethermist/worldgen/noise_settings/settings.json
+++ b/src/main/resources/data/ethermist/worldgen/noise_settings/settings.json
@@ -40,7 +40,7 @@
               "type": "minecraft:blend_density",
               "argument": {
                 "type": "minecraft:add",
-                "argument1": 0.1171875,
+                "argument1": 0.15,
                 "argument2": {
                   "type": "minecraft:mul",
                   "argument1": {
@@ -52,10 +52,10 @@
                   },
                   "argument2": {
                     "type": "minecraft:add",
-                    "argument1": -0.1171875,
+                    "argument1": -0.15,
                     "argument2": {
                       "type": "minecraft:add",
-                      "argument1": -0.078125,
+                      "argument1": -0.1,
                       "argument2": {
                         "type": "minecraft:mul",
                         "argument1": {
@@ -67,11 +67,11 @@
                         },
                         "argument2": {
                           "type": "minecraft:add",
-                          "argument1": 0.078125,
+                          "argument1": 0.1,
                           "argument2": {
                             "type": "minecraft:range_choice",
                             "input": "minecraft:overworld/sloped_cheese",
-                            "max_exclusive": 1.5625,
+                            "max_exclusive": 1.7,
                             "min_inclusive": -1000000,
                             "when_in_range": {
                               "type": "minecraft:min",
@@ -87,71 +87,39 @@
                               "argument1": {
                                 "type": "minecraft:min",
                                 "argument1": {
-                                  "type": "minecraft:min",
+                                  "type": "minecraft:add",
                                   "argument1": {
-                                    "type": "minecraft:add",
-                                    "argument1": {
-                                      "type": "minecraft:mul",
-                                      "argument1": 4,
-                                      "argument2": {
-                                        "type": "minecraft:square",
-                                        "argument": {
-                                          "type": "minecraft:noise",
-                                          "noise": "minecraft:cave_layer",
-                                          "xz_scale": 1,
-                                          "y_scale": 8
-                                        }
-                                      }
-                                    },
+                                    "type": "minecraft:mul",
+                                    "argument1": 4.5,
                                     "argument2": {
-                                      "type": "minecraft:add",
-                                      "argument1": {
-                                        "type": "minecraft:clamp",
-                                        "input": {
-                                          "type": "minecraft:add",
-                                          "argument1": 0.27,
-                                          "argument2": {
-                                            "type": "minecraft:noise",
-                                            "noise": "minecraft:cave_cheese",
-                                            "xz_scale": 1,
-                                            "y_scale": 0.6666666666666666
-                                          }
-                                        },
-                                        "max": 1,
-                                        "min": -1
-                                      },
-                                      "argument2": {
-                                        "type": "minecraft:clamp",
-                                        "input": {
-                                          "type": "minecraft:add",
-                                          "argument1": 1.5,
-                                          "argument2": {
-                                            "type": "minecraft:mul",
-                                            "argument1": -0.64,
-                                            "argument2": "minecraft:overworld/sloped_cheese"
-                                          }
-                                        },
-                                        "max": 0.5,
-                                        "min": 0
+                                      "type": "minecraft:square",
+                                      "argument": {
+                                        "type": "minecraft:noise",
+                                        "noise": "minecraft:cave_layer",
+                                        "xz_scale": 1,
+                                        "y_scale": 8
                                       }
                                     }
                                   },
-                                  "argument2": "minecraft:overworld/caves/entrances"
+                                  "argument2": {
+                                    "type": "minecraft:clamp",
+                                    "input": {
+                                      "type": "minecraft:add",
+                                      "argument1": 0.3,
+                                      "argument2": {
+                                        "type": "minecraft:noise",
+                                        "noise": "minecraft:cave_cheese",
+                                        "xz_scale": 1,
+                                        "y_scale": 0.666
+                                      }
+                                    },
+                                    "max": 1,
+                                    "min": -1
+                                  }
                                 },
-                                "argument2": {
-                                  "type": "minecraft:add",
-                                  "argument1": "minecraft:overworld/caves/spaghetti_2d",
-                                  "argument2": "minecraft:overworld/caves/spaghetti_roughness_function"
-                                }
+                                "argument2": "minecraft:overworld/caves/entrances"
                               },
-                              "argument2": {
-                                "type": "minecraft:range_choice",
-                                "input": "minecraft:overworld/caves/pillars",
-                                "max_exclusive": 0.03,
-                                "min_inclusive": -1000000,
-                                "when_in_range": -1000000,
-                                "when_out_of_range": "minecraft:overworld/caves/pillars"
-                              }
+                              "argument2": "minecraft:overworld/caves/pillars"
                             }
                           }
                         }
