--- a/src/main/resources/data/ethermist/worldgen/noise_settings/settings.json
+++ b/src/main/resources/data/ethermist/worldgen/noise_settings/settings.json
@@ -1468,7 +1468,7 @@
           "false_at_and_above": {
             "absolute": 8
           },
-          "random_name": "minecraft:deepslate",
+          "random_name": "ethermist:ancient_etherstone",
           "true_at_and_below": {
             "absolute": 0
           }
@@ -1476,7 +1476,7 @@
         "then_run": {
           "type": "minecraft:block",
           "result_state": {
-            "Name": "minecraft:deepslate",
+            "Name": "ethermist:ancient_etherstone",
             "Properties": {
               "axis": "y"
             }
